--- a/expenses/templates/base.html
+++ b/expenses/templates/base.html
@@ -5,6 +5,7 @@
     <head>
         <title>Expenses</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
     </head>
     <body>
         {% block body %}{% endblock body %}
