adjusting entry form

--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="hero-unit">
-        {% include "forms/entry.html" %}
+        {% include "forms/entry.html" with form=entry_form %}
     </div>
 
     <br>
