--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -1,27 +1,44 @@
 <form class="form-horizontal" action="/" method="post">{% csrf_token %}
-
-    <div class='control-group'>
+    {{form.errors}}
+    
+    {% if form.value.errors %}
+        <div class='control-group error'>
+    {% else %}
+        <div class='control-group'>
+    {% endif %}
         <label for="id_value" class="control-label">Value</label>
         <div class="controls">
-            <input id="id_value" name="value" type="text" />
-        </div>
+            <input id="id_value" name="value" type="text" value="{{ form.value.value }}" />
+        </div> 
     </div>
 
-    <div class="control-group">
+    {% if form.description.errors %}
+        <div class='control-group error'>
+    {% else %}
+        <div class='control-group'>
+    {% endif %}
         <label for="id_description" class="control-label">Description</label>
         <div class="controls">
             <textarea cols="40" id="id_description" name="description" rows="2"></textarea>
         </div>
     </div>
 
-    <div class="control-group">
+    {% if form.date.errors %}
+        <div class='control-group error'>
+    {% else %}
+        <div class='control-group'>
+    {% endif %}
         <label for="id_date" class="control-label">Date</label>
         <div class="controls">
             <input id="id_date" name="date" type="text" />
         </div>
     </div>
 
-    <div class="control-group">
+    {% if form.category.errors %}
+        <div class='control-group error'>
+    {% else %}
+        <div class='control-group'>
+    {% endif %}
         <label for="id_category" class="control-label">Category</label>
         <div class="controls">
             <input id="id_category" maxlength="200" name="category" type="text" />
