--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -13,7 +13,7 @@
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-calendar"></i></span>
-        <input id="id_date" class="input-small" name="date" type="text" placeholder="Date" />
+        <input id="id_date" class="datepicker input-small" name="date" type="text" placeholder="Date" />
     </div>
 
     <div class="input-prepend">
