--- a/expenses/templates/base.html
+++ b/expenses/templates/base.html
@@ -6,10 +6,17 @@
         <title>Expenses</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
+        <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
     </head>
     <body>
         {% block body %}{% endblock body %}
 
         <script src="{% static "js/jquery.js" %}"></script>
+        <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
+        <script>
+        $('.datepicker').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+        </script>
     </body>
 </html>
