--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -3,12 +3,12 @@
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-tag"></i></span>
-        <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category"/>
+        <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category" autofocus/>
     </div>
 
-    <div class="input-prepend">
+    <div class="input-prepend" id="value-input">
         <span class="add-on">$</span>
-        <input class="input-mini" id="id_value" name="value" type="text" placeholder="Value"/>
+        <input class="input-mini" id="id_value" name="value" type="text" placeholder="Value" data-title="For incoming, use a + before the value." data-placement="bottom" data-trigger='focus'/>
     </div>
 
     <div class="input-prepend">
