--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -7,24 +7,27 @@
         {% include "forms/entry.html" with form=entry_form %}
     </div>
 
-    {% regroup entries by date as daily_entries %}
+    {% regroup entries by date.month as monthly_entries %}
 
-
-    <table class="table">
-        {% for day_group in daily_entries %}
-            <thead><tr class="info">
-                <th colspan="2">{{ day_group.grouper }}</th>
-            </tr></thead>
-            <tbody>
-            {% for entry in day_group.list %}
-                <tr>
-                    <td>{{ entry.category }}</td>
-                    <td>$ {{ entry.value }}</td>
-                </tr>
+    {% for month_group in monthly_entries %}
+        {% regroup month_group.list by date.day as daily_entries %}
+        <h3>Mes {{ month_group.grouper }}</h3>
+        <table class="table">
+            {% for day_group in daily_entries %}
+                <thead><tr class="info">
+                    <th colspan="2">Dia {{ day_group.grouper }}</th>
+                </tr></thead>
+                <tbody>
+                {% for entry in day_group.list %}
+                    <tr>
+                        <td>{{ entry.category }}</td>
+                        <td>$ {{ entry.value }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
             {% endfor %}
-            </tbody>
-        {% endfor %}
-    </table> 
+        </table> 
+    {% endfor %}
 
 </div> <!-- container -->
 
