--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -3,22 +3,22 @@
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-tag"></i></span>
-        <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category" autofocus/>
+        <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category" autocomplete="off" autofocus/>
     </div>
 
     <div class="input-prepend" id="value-input">
         <span class="add-on">$</span>
-        <input class="input-mini" id="id_value" name="value" type="text" placeholder="Value" data-title="For incoming, use a + before the value." data-placement="bottom" data-trigger='focus'/>
+        <input class="input-mini" id="id_value" name="value" type="text" placeholder="Value" autocomplete="off" data-title="For incoming, use a + before the value." data-placement="bottom" data-trigger='focus'/>
     </div>
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-calendar"></i></span>
-        <input id="id_date" class="datepicker input-small" name="date" type="text" placeholder="Date" />
+        <input id="id_date" class="datepicker input-small" name="date" type="text" autocomplete="off" placeholder="Date" />
     </div>
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-pencil"></i></span>
-        <input id="id_description" maxlength="200" name="description" type="text" placeholder="Description (Optional)"/>
+        <input id="id_description" maxlength="200" name="description" type="text" autocomplete="off" placeholder="Description (Optional)"/>
     </div>
 
     <input type="submit" value="Submit" class="btn btn-primary"/>
