--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -20,7 +20,13 @@
             </tr></thead>
             <tbody>
         {% endifchanged %}
-            <tr>
+            <tr class="entry-row"
+                data-date="{{ entry.date|date:"SHORT_DATE_FORMAT" }}"
+                data-category="{{ entry.category }}"
+                data-value="{{ entry.value }}"
+                data-description="{{ entry.description }}"
+                data-id="{{ entry.id }}">
+
                 <td>{{ entry.date|naturalday }}</td>
                 <td>{{ entry.category }}</td>
                 <td>$ {{ entry.value }}</td>
@@ -32,5 +38,19 @@
     </table> 
 
 </div> <!-- container -->
+
+<div class="modal hide fade" id="mymodal">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Edit entry</h3>
+    </div>
+    <div class="modal-body">
+        {% include "forms/entry.html" %}
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn">Close</a>
+        <a href="#" class="btn btn-primary">Save changes</a>
+    </div>
+</div>
 
 {% endblock body %}
