--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -1,6 +1,8 @@
 <form class="form-inline" action="/" method="post">{% csrf_token %}
     {{form.errors}}
 
+    <input id="id_id" name="id" type="hidden" />
+
     <div class="input-prepend">
         <span class="add-on"><i class="icon-tag"></i></span>
         <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category" autocomplete="off" autofocus/>
