--- a/core/templates/forms/entry.html
+++ b/core/templates/forms/entry.html
@@ -1,21 +1,50 @@
-<form class="form-inline" action="/" method="post">{% csrf_token %}
+<form class="form-inline" name="entry-form" action="/" method="post">{% csrf_token %}
     {{form.errors}}
 
     <input id="id_id" name="id" type="hidden" />
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-tag"></i></span>
-        <input id="id_category" maxlength="200" name="category" type="text" placeholder="Category" autocomplete="off" autofocus/>
+        <input
+            id="id_category"
+            maxlength="200"
+            name="category"
+            type="text"
+            placeholder="Category"
+            autocomplete="off"
+            required
+            autofocus/>
     </div>
 
     <div class="input-prepend" id="value-input">
         <span class="add-on">$</span>
-        <input class="input-mini" id="id_value" name="value" type="text" placeholder="Value" autocomplete="off" data-title="For incoming, use a + before the value." data-placement="bottom" data-trigger='focus'/>
+        <input
+            class="input-mini"
+            id="id_value"
+            name="value"
+            type="text"
+            placeholder="Value"
+            autocomplete="off"
+            required
+
+            data-title="For incoming, use a + before the value."
+            data-placement="bottom"
+            data-trigger='focus'/>
     </div>
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-calendar"></i></span>
-        <input id="id_date" class="datepicker input-small" name="date" type="text" autocomplete="off" placeholder="Date" value="{% now "SHORT_DATE_FORMAT" %}"/>
+        <input
+            id="id_date"
+            class="datepicker input-small"
+            name="date"
+            type="text"
+            autocomplete="off"
+            placeholder="Date"
+            value="{% now "SHORT_DATE_FORMAT" %}"
+
+            required
+            />
     </div>
 
     <div class="input-prepend">
