--- a/expenses/templates/base.html
+++ b/expenses/templates/base.html
@@ -8,6 +8,8 @@
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
         <script src="{% static "js/jquery.js" %}"></script>
+
+        {% block extrahead %}{% endblock extrahead %}
     </head>
     <body>
         {% block body %}{% endblock body %}
