starting to show errors on register template

--- a/expenses/templates/base.html
+++ b/expenses/templates/base.html
@@ -17,6 +17,7 @@
         <script src="{% static "js/bootstrap-tooltip.js" %}"></script>
         <script src="{% static "js/bootstrap-modal.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
+        <script src="{% static "js/bootstrap-alert.js" %}"></script>
         <script src="{% static "js/jqBootstrapValidation.js" %}"></script>
         <script type="text/javascript">
         $(function(){
