--- a/access/templates/access/register.html
+++ b/access/templates/access/register.html
@@ -2,10 +2,17 @@
 
 
 {% block body %}
-    
+
 <div class="container">
 
 <form class="form-signin" method="POST" action="{% url "register" %}">{% csrf_token %}
+
+    {{ register_form.non_field_errors }}
+    <div class="alert">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>Warning!</strong> Best check yo self, you're not looking too good.
+    </div>
+
     <h2 class="form-signin-heading">Please sign in</h2>
     <input type="text" name="email" class="input-block-level" placeholder="Email address">
     <input type="password" name="password1" class="input-block-level" placeholder="Password">
