--- a/access/templates/access/login.html
+++ b/access/templates/access/login.html
@@ -42,9 +42,31 @@
 
 <form class="form-signin" method="POST" action="{% url "login" %}">{% csrf_token %}
     <h2 class="form-signin-heading">Please sign in</h2>
-    <input type="text" name="username" class="input-block-level" placeholder="Email address">
-    <input type="password" name="password" class="input-block-level" placeholder="Password">
-    <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+    
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{error}}
+        </div>
+    {% endfor %}
+
+    {% for field in form %}
+        <div class="control-group {% if field.errors %}error{% endif %}">
+            <div class="controls">
+                <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" class="input-block-level" placeholder="{{ field.label }}">
+            </div>
+
+            {% if field.errors %}
+            <ul>
+            {% for error in field.errors %}
+                <li><span class="help-block error">{{ error }}</span></li>
+            {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+    {% endfor %}
+
+    <button class="btn btn-primary" type="submit">Create account</button>
 </form>
 
 </div>
