--- a/access/templates/access/register.html
+++ b/access/templates/access/register.html
@@ -6,7 +6,14 @@
 <div class="container">
 
 <form class="form-signin" method="POST" action="{% url "register" %}">{% csrf_token %}
-    <h2 class="form-signin-heading">Please sign in</h2>
+    <h2 class="form-signin-heading">Create a new user</h2>
+    
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{error}}
+        </div>
+    {% endfor %}
 
     {% for field in register_form %}
         <div class="control-group {% if field.errors %}error{% endif %}">
