showing register link on login page and tweak on register form

--- a/access/templates/access/login.html
+++ b/access/templates/access/login.html
@@ -77,6 +77,8 @@
         {% endfor %}
 
         <button class="btn btn-primary" type="submit">Create account</button>
+
+        <p>Not a user yet? <a href="{% url "login" %}">Register here!</a></p>
     </form>
 
 </div> <!-- container -->
