tweaks: fixed register link login and register forms show field values in case of error spaceless tag on all html code moved entry list js to proper place template context for some global values

--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -55,3 +55,21 @@
 </div>
 
 {% endblock body %}
+
+{% block bodyend %}
+    <script type="text/javascript">
+    $(function(){
+        $('.datepicker').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+
+        $('#id_value').tooltip();
+
+        $('.entry-row').click(function(){
+            $('#mymodal').modal('show');
+        });
+
+        //$(".entry-form input,select,textarea").not("[type=submit]").jqBootstrapValidation();
+    });
+    </script>
+{% endblock bodyend %}
