--- a/access/templates/access/login.html
+++ b/access/templates/access/login.html
@@ -63,7 +63,16 @@
         {% for field in form %}
             <div class="control-group {% if field.errors %}error{% endif %}">
                 <div class="controls">
-                    <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" class="input-block-level" placeholder="{{ field.label }}">
+                    <input
+                        type="{{ field.field.widget.input_type }}"
+                        name="{{ field.name }}"
+                        class="input-block-level"
+                        placeholder="{{ field.label }}"
+                        {% if field.name not in empty_value_fields %}
+                            value={{ field.value|default_if_none:"" }}
+                        {% endif %}
+                        >
+
                 </div>
 
                 {% if field.errors %}
@@ -78,7 +87,7 @@
 
         <button class="btn btn-primary" type="submit">Create account</button>
 
-        <p>Not a user yet? <a href="{% url "login" %}">Register here!</a></p>
+        <p>Not a user yet? <a href="{% url "register" %}">Register here!</a></p>
     </form>
 
 </div> <!-- container -->
