--- a/access/templates/access/register.html
+++ b/access/templates/access/register.html
@@ -18,7 +18,15 @@
     {% for field in register_form %}
         <div class="control-group {% if field.errors %}error{% endif %}">
             <div class="controls">
-                <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" class="input-block-level" placeholder="{{ field.label }}">
+                <input
+                    type="{{ field.field.widget.input_type }}"
+                    name="{{ field.name }}"
+                    class="input-block-level"
+                    placeholder="{{ field.label }}"
+                    {% if field.name not in empty_value_fields %}
+                        value="{{ field.value|default_if_none:"" }}"
+                    {% endif %}
+                    >
             </div>
 
             {% if field.errors %}
