tweaking access templates a bit

--- a/core/templates/access/login.html
+++ b/core/templates/access/login.html
@@ -85,9 +85,9 @@
             </div>
         {% endfor %}
 
-        <button class="btn btn-primary" type="submit">Create account</button>
+        <button class="btn btn-primary" type="submit">Login</button>
 
-        <p>Not a user yet? <a href="{% url "register" %}">Register here!</a></p>
+        <p>Not a user yet? <a href="{% url "register" %}">Sign up here!</a></p>
     </form>
 
 </div> <!-- container -->
