--- a/expenses/templates/expenses/list.html
+++ b/expenses/templates/expenses/list.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="hero-unit">
-        {% include "forms/entry.html" with form=entry_form %}
+        {% include "expenses/forms/entry.html" with form=entry_form %}
     </div>
 
     <table class="table">
@@ -46,7 +46,7 @@
         <h3>Edit entry</h3>
     </div>
     <div class="modal-body">
-        {% include "forms/entry.html" %}
+        {% include "expenses/forms/entry.html" %}
     </div>
     <div class="modal-footer">
         <a href="#" class="btn">Close</a>
