--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -2,7 +2,9 @@
 
 {% block body %}
 
+{% load staticfiles %}
 {% load humanize %}
+
 {% load expenses_tags %}
 
 <div class="container">
@@ -58,19 +60,5 @@
 {% endblock body %}
 
 {% block bodyend %}
-    <script type="text/javascript">
-    $(function(){
-        $('.datepicker').datepicker({
-            format: 'mm/dd/yyyy'
-        });
-
-        $('#id_value').tooltip();
-
-        $('.entry-row').click(function(){
-            $('#mymodal').modal('show');
-        });
-
-        //$(".entry-form input,select,textarea").not("[type=submit]").jqBootstrapValidation();
-    });
-    </script>
+    <script type="text/javascript" src="{% static "js/entry-list.js" %}"></script>
 {% endblock bodyend %}
