separating new entry code into a new view

--- a/core/templates/expenses/forms/entry.html
+++ b/core/templates/expenses/forms/entry.html
@@ -1,4 +1,4 @@
-<form class="form-inline" name="entry-form" action="/" method="post">{% csrf_token %}
+<form class="form-inline" name="entry-form" action="{% url "new_entry" %}" method="post">{% csrf_token %}
     {{form.errors}}
 
     <input id="id_id" name="id" type="hidden" />
