--- a/core/templates/expenses/forms/entry.html
+++ b/core/templates/expenses/forms/entry.html
@@ -12,7 +12,6 @@
             type="text"
             placeholder="Category"
             autocomplete="off"
-            required
             autofocus/>
     </div>
 
@@ -25,7 +24,6 @@
             type="text"
             placeholder="Value"
             autocomplete="off"
-            required
 
             data-title="For incoming, use a + before the value."
             data-placement="bottom"
@@ -42,14 +40,18 @@
             autocomplete="off"
             placeholder="Date"
             value="{% now "SHORT_DATE_FORMAT" %}"
-
-            required
             />
     </div>
 
     <div class="input-prepend">
         <span class="add-on"><i class="icon-pencil"></i></span>
-        <input id="id_description" maxlength="200" name="description" type="text" autocomplete="off" placeholder="Description (Optional)"/>
+        <input
+            id="id_description"
+            maxlength="200"
+            name="description"
+            type="text"
+            autocomplete="off"
+            placeholder="Description (Optional)"/>
     </div>
 
     <input type="submit" value="Submit" class="btn btn-primary"/>
