--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,7 +7,7 @@
     <head>
         <title>{{ SITE_NAME }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
+        <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
         <script src="{% static "js/jquery.js" %}"></script>
 
@@ -44,10 +44,8 @@
 
         {% block body %}{% endblock body %}
 
-        <script src="{% static "js/bootstrap-tooltip.js" %}"></script>
-        <script src="{% static "js/bootstrap-modal.js" %}"></script>
+        <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
-        <script src="{% static "js/bootstrap-alert.js" %}"></script>
         <script src="{% static "js/jqBootstrapValidation.js" %}"></script>
 
         {% block bodyend %}{% endblock bodyend %}
