--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <div class="hero-unit">
-        {% include "expenses/forms/entry.html" with form=entry_form %}
+        {% include "expenses/forms/entry.html" %}
     </div>
 
     <table class="table">
