--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -23,11 +23,14 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container container-fluid">
-                    <a class="brand" href="#">{{ SITE_NAME }}</a>
+                    <a class="brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
                     <div class="nav-collapse collapse">
                         {% if user.is_authenticated %}
                             <p class="navbar-text pull-right">
                                 {{ user.email }} (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
+                            {% if user.is_admin %}
+                               (<a href="{% url "admin:index" %}" class="navbar-link">Painel de admininstração</a>)
+                            {% endif %}
                             </p>
                         {% else %}
                             <form name="fast-login" class="navbar-form pull-right" action="{% url "login" %}" method="POST">{% csrf_token %}
