--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -10,6 +10,11 @@
     .entry-row td {
         font-size: 18px;
     }
+    .entry-row td span.label{
+        padding: 4px 6px;
+        font-size: 15px;
+        font-weight: normal;
+    }
 </style>
 {% endblock extrahead %}
 
