--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load expenses_tags %}
 
 {% spaceless %}
 
@@ -16,6 +17,10 @@
                 padding-top: 60px;
             }
         </style>
+
+        <script type="text/javascript">
+            user_categories = {{ user_categories|to_json }};
+        </script>
 
         {% block extrahead %}{% endblock extrahead %}
     </head>
@@ -43,7 +48,6 @@
                 </div>
             </div>
         </div>
-
 
         {% block body %}{% endblock body %}
 
