--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,6 +9,7 @@
         <title>{{ SITE_NAME }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">
+        <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
         <script src="{% static "js/jquery.js" %}"></script>
 
