unit tests for delete entry view and padronizing view names

--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -94,7 +94,7 @@
         $(function(){
             $('.entry-row td i.remove-entry').click(function(){
                 var id = $(this).parent().parent().data('id');
-                var form = $("<form action='/entries/" + id + "/delete/' method='POST'>{% csrf_token %}<input type='hidden' name='id' value=" + id + "></form>");
+                var form = $("<form action='/entries/" + id + "/delete/' method='POST'>{% csrf_token %}</form>");
                 form.submit();
             });
         });
