--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -32,6 +32,15 @@
                 {% include "expenses/forms/entry.html" %}
             </div>
 
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
             <table class="table">
             {% for entry in entries %}
                 {% ifchanged entry.date.year entry.date.month %}
