--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,16 +8,13 @@
     <head>
         <title>{{ SITE_NAME }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" media="screen">
+
+        <link rel="stylesheet/less" type="text/css" href="{% static "less/styles.less" %}" />
+        <script src="{% static "js/less-1.3.3.min.js" %}" type="text/javascript"></script>
+
         <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
         <script src="{% static "js/jquery.js" %}"></script>
-
-        <style type="text/css">
-            body {
-                padding-top: 60px;
-            }
-        </style>
 
         <script type="text/javascript">
             user_categories = {{ user_categories|to_json }};
