--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -1,9 +1,20 @@
 @import "bootstrap/bootstrap.less";
 @import "bootstrap/responsive.less";
 
+// Globals
+
+// Bootstrap overrides
+
+
 // Global styles
+
 body {
     padding-top: 60px;
+}
+
+.squared-well {
+    .well();
+    .border-radius(0);
 }
 
 // Entry list styles
@@ -11,9 +22,11 @@ body {
     td {
         font-size: 18px;
 
-        i {
+        &.action-bar i {
             padding-right: 2px;
             padding-left: 2px;
+            //.icon-large();
+            .pull-right();
         }
 
         span.label {
@@ -23,3 +36,13 @@ body {
         }
     }
 }
+
+.entry-form-container {
+    .squared-well();
+}
+
+.side-panel {
+    .squared-well();
+}
+
+
