--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,11 +9,8 @@
         <title>{{ SITE_NAME }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet/less" type="text/css" href="{% static "less/styles.less" %}" />
-        <script src="{% static "js/less-1.3.3.min.js" %}" type="text/javascript"></script>
-
+        <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" />
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" media="screen">
-        <script src="{% static "js/jquery.js" %}"></script>
 
         <script type="text/javascript">
             user_categories = {{ user_categories|to_json }};
@@ -48,8 +45,19 @@
 
         {% block body %}{% endblock body %}
 
+        <script src="{% static "js/jquery.js" %}"></script>
         <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
+
+        <script type="text/javascript">
+            $(function(){
+                $('.entry-row td.action-bar i.delete-entry').click(function(){
+                    var id = $(this).parent().parent().data('id');
+                    var form = $("<form action='/entries/" + id + "/delete/' method='POST'>{% csrf_token %}</form>");
+                    form.submit();
+                });
+            });
+        </script>
 
         {% block bodyend %}{% endblock bodyend %}
     </body>
