--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -1,10 +1,13 @@
 @import "bootstrap/bootstrap.less";
 @import "bootstrap/responsive.less";
 
+// Global overrides
+@bodyBackground: #f5f5f5;
+@heroUnitBackground: #fff;
+
 // Global styles
 body {
     padding-top: 60px;
-    background-color: #f5f5f5;
 }
 
 .squared-well {
@@ -16,9 +19,9 @@ body {
 
 // Login and register pages
 .form-signin {
-    max-width: 300px;
+    //max-width: 300px;
     padding: 19px 29px 29px;
-    margin: 0 auto 20px;
+    //margin: 0 auto 20px;
     background-color: #fff;
     border: 1px solid #e5e5e5;
     .border-radius(5px);
