--- a/core/templates/access/register.html
+++ b/core/templates/access/register.html
@@ -4,44 +4,7 @@
 {% block body %}
 
 <div class="container">
-
-<form class="form-signin" method="POST" action="{% url "register" %}">{% csrf_token %}
-    <h2 class="form-signin-heading">Sign up</h2>
-    
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-error">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{error}}
-        </div>
-    {% endfor %}
-
-    {% for field in register_form %}
-        <div class="control-group {% if field.errors %}error{% endif %}">
-            <div class="controls">
-                <input
-                    type="{{ field.field.widget.input_type }}"
-                    name="{{ field.name }}"
-                    class="input-block-level"
-                    placeholder="{{ field.label }}"
-                    {% if field.name not in empty_value_fields %}
-                        value="{{ field.value|default_if_none:"" }}"
-                    {% endif %}
-                    >
-            </div>
-
-            {% if field.errors %}
-            <ul>
-            {% for error in field.errors %}
-                <li><span class="help-block error">{{ error }}</span></li>
-            {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
-    {% endfor %}
-
-    <button class="btn btn-primary" type="submit">Create account</button>
+    {% include "access/forms/register.html" %}
     <p>Already a user? <a href="{% url "login" %}">Sign in</a></p>
-</form>
-
 </div>
 {% endblock body %}
