--- a/core/templates/access/forms/register.html
+++ b/core/templates/access/forms/register.html
@@ -1,5 +1,5 @@
-<form class="form-signin" method="POST" action="{% url "register" %}">{% csrf_token %}
-    <h2 class="form-signin-heading">Sign up</h2>
+<form class="form-signup" method="POST" action="{% url "register" %}">{% csrf_token %}
+    <h2>Sign up</h2>
     
     {% for field in register_form %}
         <div class="control-group {% if field.errors %}error{% endif %}">
