--- a/core/templates/access/forms/login.html
+++ b/core/templates/access/forms/login.html
@@ -9,7 +9,7 @@
         {% endfor %}
     {% endif %}
 
-    <h2 class="form-signin-heading">Please sign in</h2>
+    <h2>Please sign in</h2>
 
     {% for error in form.non_field_errors %}
         <div class="alert alert-error">
