--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,8 +33,8 @@
                             </p>
                         {% else %}
                             <form name="fast-login" class="navbar-form pull-right" action="{% url "login" %}" method="POST">{% csrf_token %}
-                                <input type="text" class="span2" name="email" placeholder="Email">
-                                <input class="span2" type="password" placeholder="Password">
+                                <input type="text" class="span2" name="username" placeholder="Email">
+                                <input class="span2" type="password" name="password" placeholder="Password">
                                 <button type="submit" class="btn">Sign in</button>
                             </form>
                         {% endif %}
