--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -57,6 +57,9 @@
                     form.submit();
                 });
             });
+            $(function(){
+                $('input#id_category').typeahead({source: user_categories});
+            });
         </script>
 
         {% block bodyend %}{% endblock bodyend %}
