setting up parts of password_reset

--- a/core/templates/access/login.html
+++ b/core/templates/access/login.html
@@ -4,6 +4,7 @@
     
 <div class="container">
     {% include "access/forms/login.html" %}
+    (<a href="{% url "password_reset_recover" %}">Reset password</a>)
 
 
 </div> <!-- container -->
