--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -26,7 +26,7 @@
                     <div class="nav-collapse collapse">
                         {% if user.is_authenticated %}
                             <p class="navbar-text pull-right">
-                                {{ user.email }} (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
+                                Olá, {{ user.name }} ({{ user.email }}) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
                             {% if user.is_admin %}
                                (<a href="{% url "admin:index" %}" class="navbar-link">Painel de admininstração</a>)
                             {% endif %}
