hero-unit layout adjustements

--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -17,11 +17,15 @@ body {
     .border-radius(0);
 }
 
+.hero-unit {
+    border: 1px solid darken(@heroUnitBackground, 7%);
+    .border-radius(0);
+}
+
 
 // Login and register pages
 [class^="form-sign"] {
     .squared-well();
-    .border-radius(5px);
     .box-shadow(5px);
 
     input[type="text"], input[type="password"],
