--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -8496,6 +8496,12 @@ body {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
 }
+.hero-unit {
+  border: 1px solid #ededed;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
 [class^="form-sign"] {
   min-height: 20px;
   padding: 19px;
@@ -8511,9 +8517,6 @@ body {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   -webkit-box-shadow: 5px;
   -moz-box-shadow: 5px;
   box-shadow: 5px;
